Dummy chages to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>AppICT | It's not just rocket science, it's ICT!</title>
+  <title>AppICT | It's not just rocket science, it's IT!</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
