Update details of site.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">AppICT</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -55,9 +55,9 @@
   <!-- Header -->
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">AppICCT System Development & Services</h1>
+      <h1 class="mb-1">Welcome to #AppICT</h1>
       <h3 class="mb-5">
-        <em>ALl your ICT Needs, We Got It.</em>
+        <em>ALl your ICT Needs, We Got IT.</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
@@ -70,8 +70,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>Leverage the wonders of ICT into your bussiness ooperation!</h2>
-          <p class="lead mb-5">Build a rela-time operation app or a comprehensive flexible ERP or even a custom mobile app for your loyalty programme, AppICT has the expertise to help you.
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
+          <p class="lead mb-5">Build a real-time operation app or a comprehensive flexible ERP or even a custom mobile app for your loyalty programme, AppICT has the expertise to help you.</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
         </div>
       </div>
@@ -91,27 +90,27 @@
             <i class="icon-screen-smartphone"></i>
           </span>
           <h4>
-            <strong>Responsive</strong>
+            <strong>System Development</strong>
           </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <p class="text-faded mb-0">Desktop, mobile or web!!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>ICT Solutioning</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">Need an IT for that? We got that covered.</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>Online Portfolio Management</strong>
           </h4>
-          <p class="text-faded mb-0">Millions of users
+          <p class="text-faded mb-0">Hey, that social media manager you're looking for?
             <i class="fas fa-heart"></i>
             Start Bootstrap!</p>
         </div>
@@ -120,7 +119,7 @@
             <i class="icon-mustache"></i>
           </span>
           <h4>
-            <strong>Question</strong>
+            <strong>Project Management & Governance</strong>
           </h4>
           <p class="text-faded mb-0">I mustache you a question...</p>
         </div>
@@ -133,8 +132,8 @@
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
+        consulting partner!</h2>
+      <a class="btn btn-primary btn-xl" href="http://www.appict.net/">Reach Us Now!</a>
     </div>
   </section>
 
@@ -142,16 +141,16 @@
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Portfolio</h3>
-        <h2 class="mb-5">Recent Projects</h2>
+        <h3 class="text-secondary mb-0">Our Catalog</h3>
+        <h2 class="mb-5">Key Product/Services</h2>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Stationary</h2>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <h2>Real Time Tracking</h2>
+                <p class="mb-0">Track an asset in real-time!</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -161,8 +160,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Ice Cream</h2>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <h2>Web App Development</h2>
+                <p class="mb-0">Forget PHP, we're rooting Javascript now!</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -172,8 +171,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Strawberries</h2>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                <h2>Mobile Apps</h2>
+                <p class="mb-0">Now, let;s REALLY put your services under the thumbs of your clients shall we?</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
@@ -183,8 +182,8 @@
           <a class="portfolio-item" href="#">
             <span class="caption">
               <span class="caption-content">
-                <h2>Workspace</h2>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                <h2>Professional Governance</h2>
+                <p class="mb-0">A set of professional services helps to govern your ICT roadmaps.</p>
               </span>
             </span>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
