--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Leverage the wonders of ICT into your bussiness ooperation!</h2>
+          <h2>Leverage the wonders of ICT into your bussiness operation!</h2>
           <p class="lead mb-5">Build a real-time operation app or a comprehensive flexible ERP or even a custom mobile app for your loyalty programme, AppICT has the expertise to help you.</p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
         </div>
